--- a/react/react-demo/src/components/Dropdown.css
+++ b/react/react-demo/src/components/Dropdown.css
@@ -1,18 +1,32 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: white;
-}
+} */
 
 .dropdown {
     list-style: none;
-    top: 50px;
-    background-color: red;
+    top: 40px;
+    background-color: black;
+    font-size: smaller;
+    text-align: center;
+    width: 80px;
+    padding: 10px 0;
     display: block;
     position: absolute;
+    
 }
 
+.dropdown > li{
+    padding: 8px 10px;
+    cursor: pointer;
+}
+
+.dropdown > li:hover{
+    background-color: white;
+    color: black;
+}
 .hidden{
     display: none;
 }
